Auto Depth problem with Cliping Region #94728

Closed
opened 2022-01-08 00:21:57 +01:00 by Alex · 12 comments

System Information
system-info.txt

Blender Version
Broken: 3.0
Worked: 2.93.5

Short description of error
When isolate view with ALT-B other objects/pieces of objects hiding for user, but not for Auto Depth function, therefore view rotating aroung hided object. In version 2.93 all ok, view rotate around only isolated piece.

AutoDepth3.gif

Exact steps for others to reproduce the error

  • open attached .blend file
  • make sure Auto Depth is enabled ({nav Navigation > Auto - Depth})
  • on the 3D View, press {key Alt B} to call the Clipping Region operator
  • make the region clipped so that only the smaller cube is visible
  • Orbit with the mouse cursor over the smaller Cube
    Autodepth will continue considering the larger Cube.
    clip_autodepth_orbit_bug.blend
**System Information** [system-info.txt](https://archive.blender.org/developer/F12793465/system-info.txt) **Blender Version** Broken: 3.0 Worked: 2.93.5 **Short description of error** When isolate view with ALT-B other objects/pieces of objects hiding for user, but not for Auto Depth function, therefore view rotating aroung hided object. In version 2.93 all ok, view rotate around only isolated piece. ![AutoDepth3.gif](https://archive.blender.org/developer/F12793528/AutoDepth3.gif) **Exact steps for others to reproduce the error** - open attached .blend file - make sure Auto Depth is enabled ({nav Navigation > Auto - [x] Depth}) - on the 3D View, press {key Alt B} to call the Clipping Region operator - make the region clipped so that only the smaller cube is visible - Orbit with the mouse cursor over the smaller Cube Autodepth will continue considering the larger Cube. [clip_autodepth_orbit_bug.blend](https://archive.blender.org/developer/F12800191/clip_autodepth_orbit_bug.blend)
Author

Added subscriber: @Paladinqp

Added subscriber: @Paladinqp

Added subscriber: @iss

Added subscriber: @iss

Can't reproduce this issue. your GPU is quite old but still should be supported. In any case, please check if it is possible to update GPU drivers, it may resolve this issue.

Can't reproduce this issue. your GPU is quite old but still should be supported. In any case, please check if it is possible to update GPU drivers, it may resolve this issue.
Author

Driver last version :((. You reproduce with enable Auto Depth?
calen2021222.jpg

If yes, my PC is bad. But what did the developers do that the most elementary and used function stopped working for me))

Driver last version :((. You reproduce with enable Auto Depth? ![calen2021222.jpg](https://archive.blender.org/developer/F12795428/calen2021222.jpg) If yes, my PC is bad. But what did the developers do that the most elementary and used function stopped working for me))

Added subscriber: @jenkm

Added subscriber: @jenkm

I can confirm on Mac, works fine in 2.93.5, but broken in 3.1.0.

Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20```
I can confirm on Mac, works fine in 2.93.5, but broken in 3.1.0. ```Operating system: macOS-11.6-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.6.20```

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can also confirm the problem.


System Information
Operating system: macOS-12.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 76.3

I can also confirm the problem. --- **System Information** Operating system: macOS-12.1-arm64-arm-64bit 64 Bits Graphics card: Apple `M1` Apple 4.1 Metal - 76.3

This issue was referenced by aafbd74646

This issue was referenced by aafbd7464656afc243d9b5d8230b0d25bddfeedb

This issue was referenced by 6774cae3f2

This issue was referenced by 6774cae3f25bba4c08d338656f913a36bde4af35

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-01-11 14:40:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94728
No description provided.